adding hot styles

--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
         <p>Details and Programs: <a href="http://mfah.org/rothko">mfah.org/rothko</a></p>
       </div>
 
+      <div class="article-gittest"
+        <p>Details and Programs: <a href="http://mfah.org/rothko">mfah.org/rothko</a></p>
+      </div>
+
       <hr/>
 
       <div class="article-03">
